[gd_scene load_steps=10 format=3 uid="uid://dfr3kf48m5u21"]

[ext_resource type="Script" uid="uid://bd2biimtsq78" path="res://Ball/ball.gd" id="1_1rrwo"]
[ext_resource type="Script" uid="uid://cb4yc8v6xgeyg" path="res://Core/StateMachine/state_manager.gd" id="3_qrf04"]
[ext_resource type="Script" uid="uid://x37q3ijqfg2y" path="res://Ball/States/ball_state_free.gd" id="4_uw8co"]
[ext_resource type="Texture2D" uid="uid://ncrt7lh127i5" path="res://Ressources/Ball/SPR_Ball.png" id="5_j33xc"]
[ext_resource type="Script" path="res://Ball/States/ball_state_held.gd" id="5_uw8co"]
[ext_resource type="AudioStream" uid="uid://dan06s0bpnewv" path="res://Ressources/Ball/Sounds/SFX_Ball_Pop.wav" id="6_j33xc"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ni1na"]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ni1na"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uw8co"]

[node name="Ball" type="RigidBody2D"]
collision_layer = 4
collision_mask = 49
physics_material_override = SubResource("PhysicsMaterial_ni1na")
contact_monitor = true
max_contacts_reported = 3
script = ExtResource("1_1rrwo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ni1na")

[node name="StateManager" type="Node" parent="." node_paths=PackedStringArray("active_state", "possessed_node", "states")]
script = ExtResource("3_qrf04")
active_state = NodePath("../States/BallStateFree")
possessed_node = NodePath("..")
states = [NodePath("../States/BallStateFree"), NodePath("../States/BallStateHeld")]

[node name="States" type="Node" parent="."]

[node name="BallStateFree" type="Node" parent="States" node_paths=PackedStringArray("state_manager")]
script = ExtResource("4_uw8co")
state_manager = NodePath("../../StateManager")
state_name = "Free"

[node name="BallStateHeld" type="Node" parent="States" node_paths=PackedStringArray("state_manager")]
script = ExtResource("5_uw8co")
state_manager = NodePath("../../StateManager")
state_name = "Held"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_j33xc")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1.8068755, 1.721373)
shape = SubResource("CircleShape2D_uw8co")

[node name="PopSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_j33xc")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_hit"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="finished" from="PopSFX" to="." method="_on_pop_sfx_finished"]
